# FBReader-Android-2

./: ant.properties  build.gradle  build.xml  gradle.properties  project.properties  settings.gradle
docs/: branches.html
fbreader/api/: build.gradle
fbreader/api/src/main/: AndroidManifest.xml
fbreader/api/src/main/java/org/geometerplus/android/util/: OrientationUtil.java
fbreader/api/src/main/java/org/geometerplus/fbreader/book/: AbstractBook.java  AbstractBookCollection.java  AbstractSerializer.java  Author.java  Book.java  BookEvent.java  BookQuery.java  Bookmark.java  Tag.java  (+10 more)
fbreader/app/: build.gradle
fbreader/app/src/main/: AndroidManifest.xml
fbreader/app/src/main/assets/data/: licences.html
fbreader/app/src/main/assets/data/premium/: be.html  cs.html  de.html  en.html  en_US.html  es.html  nl.html  pt.html  ru.html
fbreader/app/src/main/assets/default/: plugins.xml  styles.css  styles.xml
fbreader/app/src/main/assets/formats/fb2/: fb2genres.xml
fbreader/app/src/main/assets/formats/html/: html.ent
fbreader/app/src/main/assets/formats/xhtml/: xhtml-merged.ent
fbreader/app/src/main/help/html/: be.html  cs.html  de.html  el.html  en.html  en_US.html  es.html  fa.html  fr.html  hy.html  ja.html  ko.html  nl.html  pl.html  pt.html  pt_BR.html  ru.html  uk.html
fbreader/app/src/main/java/org/: LogUtils.java
fbreader/app/src/main/java/org/vimgadgets/linebreak/: LineBreaker.java
fbreader/app/src/main/res/drawable/: dropdown.xml  link.xml  panel.xml  popup_back.xml  popup_bookmark.xml  popup_close.xml  popup_close_large.xml  popup_copy.xml  popup_forward.xml  popup_share.xml  popup_translate.xml
fbreader/app/src/main/res/layout/: background_predefined_item.xml  background_preference.xml  bookmark_item.xml  color_preference.xml  navigation_panel.xml  selection_panel.xml  style_item.xml  toc_tree_item.xml
fbreader/app/src/main/res/values/: colors.xml  strings.xml
fbreader/common/: build.gradle
fbreader/common/src/main/: AndroidManifest.xml
fbreader/common/src/main/assets/default/: keymap-nook.xml  keymap.xml
fbreader/common/src/main/assets/default/tapzones/: down.xml  left_to_right.xml  right_to_left.xml  up.xml
fbreader/common/src/main/assets/dictionaries/: bitknights.xml  main.xml
fbreader/common/src/main/assets/encodings/: Encodings.xml
fbreader/common/src/main/java/org/geometerplus/fbreader/: Paths.java
fbreader/common/src/main/res/values/: strings.xml  styles.xml
fbreader/common/src/main/res/xml/: searchable.xml
fbreader/resources/: build.gradle
fbreader/resources/src/main/: AndroidManifest.xml
fbreader/resources/src/main/assets/resources/: lang.xml
fbreader/resources/src/main/assets/resources/application/: ar.xml  be.xml  bg.xml  ca.xml  cs.xml  da.xml  de.xml  el.xml  en.xml  en_US.xml  es.xml  eu.xml  fa.xml  fr.xml  gl.xml  hu.xml  hy.xml  it.xml  ja.xml  ka.xml  ko.xml  nb.xml  nl.xml  pl.xml  pt.xml  pt_BR.xml  ro.xml  ru.xml  sr.xml  th.xml  tr.xml  uk.xml  ur.xml  vi.xml  zh.xml  zh_TW.xml
fbreader/resources/src/main/assets/resources/zlibrary/: ar.xml  bg.xml  ca.xml  cs.xml  da.xml  el.xml  es.xml  eu.xml  fa.xml  fr.xml  gl.xml  hu.xml  hy.xml  it.xml  ja.xml  ka.xml  ko.xml  nb.xml  pl.xml  pt.xml  pt_BR.xml  ro.xml  sr.xml  th.xml  tr.xml  ur.xml  vi.xml  zh.xml  zh_TW.xml
fbreader/text-formats/: build.gradle
fbreader/text-formats/src/main/: AndroidManifest.xml
fbreader/text-formats/src/main/jni/: CMakeLists.txt
fbreader/text-formats/src/main/jni/NativeFormats/: CMakeLists.txt
fbreader/text-formats/src/main/jni/NativeFormats/android/: AndroidUtil.cpp  AndroidUtil.h  JavaNativeFormatPlugin.cpp  JavaPluginCollection.cpp
fbreader/text-formats/src/main/jni/NativeFormats/android/zlibrary/core/logger/: ZLLogger.cpp
fbreader/text-formats/src/main/jni/NativeFormats/common/fbreader/bookmodel/: BookModel.cpp  BookModel.h  BookReader.cpp  BookReader.h  FBTextKind.h
fbreader/text-formats/src/main/jni/NativeFormats/common/fbreader/formats/: FormatPlugin.cpp  FormatPlugin.h
fbreader/text-formats/src/main/jni/NativeFormats/common/fbreader/formats/css/: StyleSheetParser.cpp  StyleSheetParser.h  StyleSheetTable.cpp  StyleSheetTable.h
fbreader/text-formats/src/main/jni/NativeFormats/common/fbreader/formats/oeb/: NCXReader.cpp  NCXReader.h  OEBBookReader.cpp  OEBBookReader.h  OEBEncryptionReader.cpp  XHTMLImageFinder.h
fbreader/text-formats/src/main/jni/NativeFormats/common/fbreader/formats/txt/: PlainTextFormat.cpp  PlainTextFormat.h  TxtBookReader.cpp  TxtBookReader.h
fbreader/text-formats/src/main/jni/NativeFormats/common/fbreader/formats/util/: MiscUtil.cpp  MiscUtil.h  XMLTextStream.cpp
fbreader/text-formats/src/main/jni/NativeFormats/common/fbreader/formats/xhtml/: XHTMLReader.cpp  XHTMLReader.h
fbreader/text-formats/src/main/jni/NativeFormats/common/zlibrary/core/language/: ZLLanguageDetector.cpp  ZLLanguageList.cpp
fbreader/text-formats/src/main/jni/NativeFormats/common/zlibrary/core/logger/: ZLLogger.cpp  ZLLogger.h
fbreader/text-formats/src/main/jni/NativeFormats/common/zlibrary/core/util/: ZLUnicodeUtil.cpp
fbreader/text-formats/src/main/jni/NativeFormats/common/zlibrary/core/xml/: ZLXMLReader.h
fbreader/text-formats/src/main/jni/NativeFormats/common/zlibrary/core/xml/expat/: ZLXMLReaderInternal.h
fbreader/text-formats/src/main/jni/NativeFormats/common/zlibrary/text/model/: ZLCachedMemoryAllocator.cpp  ZLCachedMemoryAllocator.h  ZLTextModel.cpp  ZLTextModel.h  ZLTextStyleEntry.cpp  ZLTextStyleEntry.h
fbreader/text-formats/src/main/jni/expat-2.0.1/: CMakeLists.txt
fbreader/text-formats/src/main/jni/expat-2.0.1/amiga/: expat.xml
fbreader/text-formats/src/main/jni/expat-2.0.1/doc/: reference.html
fbreader/util/: build.gradle
fbreader/util/src/main/: AndroidManifest.xml
fbreader/util/src/main/java/org/fbreader/util/: Boolean3.java  ComparisonUtil.java  IOUtil.java  NaturalOrderComparator.java  Pair.java
fbreader/zip-amse/: build.gradle
fbreader/zip-amse/src/main/: AndroidManifest.xml
fbreader/zip-amse/src/main/jni/: CMakeLists.txt
scripts/resources/: clean.xslt
(+611 files in other folders)
