cmake_minimum_required(VERSION 3.6.0)

set(CMAKE_VERBOSE_MAKEFILE, on)

add_library(NativeFormats-v4
            SHARED
	android/main.cpp
	android/JavaNativeFormatPlugin.cpp
	android/JavaPluginCollection.cpp
	android/AndroidUtil.cpp
	android/JniEnvelope.cpp
	common/zlibrary/core/constants/ZLXMLNamespace.cpp
	common/zlibrary/core/drm/FileEncryptionInfo.cpp
	common/zlibrary/core/encoding/DummyEncodingConverter.cpp
	common/zlibrary/core/encoding/Utf16EncodingConverters.cpp
	common/zlibrary/core/encoding/Utf8EncodingConverter.cpp
	android/zlibrary/core/encoding/JavaEncodingConverter.cpp
	common/zlibrary/core/encoding/ZLEncodingCollection.cpp
	common/zlibrary/core/encoding/ZLEncodingConverter.cpp
	common/zlibrary/core/filesystem/ZLDir.cpp
	common/zlibrary/core/filesystem/ZLFSManager.cpp
	common/zlibrary/core/filesystem/ZLFile.cpp
	common/zlibrary/core/filesystem/ZLInputStreamDecorator.cpp
	common/zlibrary/core/filesystem/zip/ZLGzipInputStream.cpp
	common/zlibrary/core/filesystem/zip/ZLZDecompressor.cpp
	common/zlibrary/core/filesystem/zip/ZLZipDir.cpp
	common/zlibrary/core/filesystem/zip/ZLZipEntryCache.cpp
	common/zlibrary/core/filesystem/zip/ZLZipHeader.cpp
	common/zlibrary/core/filesystem/zip/ZLZipInputStream.cpp
	common/zlibrary/core/language/ZLCharSequence.cpp
	common/zlibrary/core/language/ZLLanguageDetector.cpp
	common/zlibrary/core/language/ZLLanguageList.cpp
	common/zlibrary/core/language/ZLLanguageMatcher.cpp
	common/zlibrary/core/language/ZLStatistics.cpp
	common/zlibrary/core/language/ZLStatisticsGenerator.cpp
	common/zlibrary/core/language/ZLStatisticsItem.cpp
	common/zlibrary/core/language/ZLStatisticsXMLReader.cpp
	common/zlibrary/core/library/ZLibrary.cpp
	common/zlibrary/core/logger/ZLLogger.cpp
	android/zlibrary/core/logger/ZLLogger.cpp
	common/zlibrary/core/util/ZLFileUtil.cpp
	common/zlibrary/core/util/ZLLanguageUtil.cpp
	common/zlibrary/core/util/ZLStringUtil.cpp
	common/zlibrary/core/util/ZLUnicodeUtil.cpp
	android/zlibrary/core/util/ZLUnicodeUtil.cpp
	common/zlibrary/core/util/JSONWriter.cpp
	common/zlibrary/core/xml/ZLAsynchronousInputStream.cpp
	common/zlibrary/core/xml/ZLPlainAsynchronousInputStream.cpp
	common/zlibrary/core/xml/ZLXMLReader.cpp
	common/zlibrary/core/xml/expat/ZLXMLReaderInternal.cpp
	common/zlibrary/core/unix/filesystem/ZLUnixFSDir.cpp
	common/zlibrary/core/unix/filesystem/ZLUnixFSManager.cpp
	common/zlibrary/core/unix/filesystem/ZLUnixFileInputStream.cpp
	common/zlibrary/core/unix/filesystem/ZLUnixFileOutputStream.cpp
	common/zlibrary/core/unix/library/ZLUnixLibrary.cpp
	common/zlibrary/text/model/ZLCachedMemoryAllocator.cpp
	common/zlibrary/text/model/ZLTextModel.cpp
	common/zlibrary/text/model/ZLTextParagraph.cpp
	common/zlibrary/text/model/ZLTextStyleEntry.cpp
	common/zlibrary/text/model/ZLVideoEntry.cpp
	common/zlibrary/text/fonts/FontManager.cpp
	common/zlibrary/text/fonts/FontMap.cpp
	android/zlibrary/core/filesystem/JavaFSDir.cpp
	android/zlibrary/core/filesystem/JavaInputStream.cpp
	android/zlibrary/core/filesystem/ZLAndroidFSManager.cpp
	android/zlibrary/core/library/ZLAndroidLibraryImplementation.cpp
	common/fbreader/bookmodel/BookModel.cpp
	common/fbreader/bookmodel/BookReader.cpp
	common/fbreader/formats/EncodedTextReader.cpp
	common/fbreader/formats/FormatPlugin.cpp
	common/fbreader/formats/PluginCollection.cpp
	common/fbreader/formats/fb2/FB2BookReader.cpp
	common/fbreader/formats/fb2/FB2CoverReader.cpp
	common/fbreader/formats/fb2/FB2MetaInfoReader.cpp
	common/fbreader/formats/fb2/FB2Plugin.cpp
	common/fbreader/formats/fb2/FB2Reader.cpp
	common/fbreader/formats/fb2/FB2TagManager.cpp
	common/fbreader/formats/fb2/FB2UidReader.cpp
	common/fbreader/formats/css/CSSInputStream.cpp
	common/fbreader/formats/css/CSSSelector.cpp
	common/fbreader/formats/css/StringInputStream.cpp
	common/fbreader/formats/css/StyleSheetParser.cpp
	common/fbreader/formats/css/StyleSheetTable.cpp
	common/fbreader/formats/css/StyleSheetUtil.cpp
	common/fbreader/formats/html/HtmlBookReader.cpp
	common/fbreader/formats/html/HtmlDescriptionReader.cpp
	common/fbreader/formats/html/HtmlEntityCollection.cpp
	common/fbreader/formats/html/HtmlPlugin.cpp
	common/fbreader/formats/html/HtmlReader.cpp
	common/fbreader/formats/html/HtmlReaderStream.cpp
	common/fbreader/formats/oeb/NCXReader.cpp
	common/fbreader/formats/oeb/OEBBookReader.cpp
	common/fbreader/formats/oeb/OEBCoverReader.cpp
	common/fbreader/formats/oeb/OEBEncryptionReader.cpp
	common/fbreader/formats/oeb/OEBMetaInfoReader.cpp
	common/fbreader/formats/oeb/OEBPlugin.cpp
	common/fbreader/formats/oeb/OEBSimpleIdReader.cpp
	common/fbreader/formats/oeb/OEBTextStream.cpp
	common/fbreader/formats/oeb/OEBUidReader.cpp
	common/fbreader/formats/oeb/OPFReader.cpp
	common/fbreader/formats/oeb/XHTMLImageFinder.cpp
	common/fbreader/formats/pdb/BitReader.cpp
	common/fbreader/formats/pdb/DocDecompressor.cpp
	common/fbreader/formats/pdb/HtmlMetainfoReader.cpp
	common/fbreader/formats/pdb/HuffDecompressor.cpp
	common/fbreader/formats/pdb/MobipocketHtmlBookReader.cpp
	common/fbreader/formats/pdb/MobipocketPlugin.cpp
	common/fbreader/formats/pdb/PalmDocLikePlugin.cpp
	common/fbreader/formats/pdb/PalmDocLikeStream.cpp
	common/fbreader/formats/pdb/PalmDocStream.cpp
	common/fbreader/formats/pdb/PdbPlugin.cpp
	common/fbreader/formats/pdb/PdbReader.cpp
	common/fbreader/formats/pdb/PdbStream.cpp
	common/fbreader/formats/pdb/SimplePdbPlugin.cpp
	common/fbreader/formats/rtf/RtfBookReader.cpp
	common/fbreader/formats/rtf/RtfDescriptionReader.cpp
	common/fbreader/formats/rtf/RtfPlugin.cpp
	common/fbreader/formats/rtf/RtfReader.cpp
	common/fbreader/formats/rtf/RtfReaderStream.cpp
	common/fbreader/formats/txt/PlainTextFormat.cpp
	common/fbreader/formats/txt/TxtBookReader.cpp
	common/fbreader/formats/txt/TxtPlugin.cpp
	common/fbreader/formats/txt/TxtReader.cpp
	common/fbreader/formats/util/EntityFilesCollector.cpp
	common/fbreader/formats/util/MergedStream.cpp
	common/fbreader/formats/util/MiscUtil.cpp
	common/fbreader/formats/util/XMLTextStream.cpp
	common/fbreader/formats/xhtml/XHTMLReader.cpp
	common/fbreader/formats/xhtml/XHTMLTagInfo.cpp
	common/fbreader/formats/doc/DocBookReader.cpp
	common/fbreader/formats/doc/DocMetaInfoReader.cpp
	common/fbreader/formats/doc/DocPlugin.cpp
	common/fbreader/formats/doc/DocStreams.cpp
	common/fbreader/formats/doc/OleMainStream.cpp
	common/fbreader/formats/doc/OleStorage.cpp
	common/fbreader/formats/doc/OleStream.cpp
	common/fbreader/formats/doc/OleStreamParser.cpp
	common/fbreader/formats/doc/OleStreamReader.cpp
	common/fbreader/formats/doc/OleUtil.cpp
	common/fbreader/formats/doc/DocInlineImageReader.cpp
	common/fbreader/formats/doc/DocFloatImageReader.cpp
	common/fbreader/formats/doc/DocAnsiConverter.cpp
	common/fbreader/library/Author.cpp
	common/fbreader/library/Book.cpp
	common/fbreader/library/Comparators.cpp
	common/fbreader/library/Tag.cpp
	common/fbreader/library/UID.cpp
)

include_directories(android
                    common/zlibrary/core/constants
                    common/zlibrary/core/drm
                    common/zlibrary/core/encoding
                    common/zlibrary/core/filesystem
                    common/zlibrary/core/image
                    common/zlibrary/core/language
                    common/zlibrary/core/library
                    common/zlibrary/core/logger
                    common/zlibrary/core/util
                    common/zlibrary/core/xml
                    common/zlibrary/text/model
                    common/zlibrary/text/fonts
)

set(distribution_DIR ${CMAKE_SOURCE_DIR}/distribution)
add_library(lib_expat
            STATIC
            IMPORTED)
set_target_properties(lib_expat PROPERTIES IMPORTED_LOCATION
    ${distribution_DIR}/expat/lib/${ANDROID_ABI}/libexpat.a)

set(expat_include_path ${CMAKE_SOURCE_DIR}/expat-2.0.1/lib)
target_include_directories(NativeFormats-v4
                           PRIVATE
                           ${expat_include_path}
)

target_link_libraries(NativeFormats-v4
                      z
                      log
                      lib_expat)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++11")